Fix deserialization of network data