@@ -64,30 +64,26 @@
 
 package com.radixdlt.serialization;
 
-import static com.radixdlt.serialization.mapper.DsonFieldFilter.filterProviderFor;
-
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JavaType;
 import com.fasterxml.jackson.databind.ser.FilterProvider;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Lists;
 import com.radixdlt.serialization.DsonOutput.Output;
 import com.radixdlt.serialization.mapper.JacksonCborMapper;
-import com.radixdlt.serialization.mapper.JacksonJsonMapper;
+
 import java.io.IOException;
-import java.util.Collection;
 import java.util.EnumSet;
+import java.util.List;
 import java.util.Map;
-import java.util.Arrays;
 import java.util.Optional;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.stream.Collector;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import org.json.JSONObject;
+
+import static com.radixdlt.serialization.mapper.DsonFieldFilter.filterProviderFor;
 
 /**
  * Serialization class that handles conversion to/from DSON and JSON.
@@ -106,9 +102,6 @@ public class Serialization {
 	}
 
 	private final ImmutableMap<Output, JacksonCborMapper> dsonMappers;
-	private final ImmutableMap<Output, JacksonJsonMapper> jsonMappers;
-
-	private final SerializerIds idLookup;
 
 	private final FilterProvider allProvider;
 	private final FilterProvider noneProvider;
@@ -116,9 +109,7 @@ public class Serialization {
 	// Constructor set up to be dependency injection capable at some future date
 	@VisibleForTesting
 	Serialization(SerializerIds idLookup, SerializationPolicy policy) {
-		this.idLookup = idLookup;
-
-		EnumSet<Output> availableOutputs = EnumSet.allOf(Output.class);
+		var availableOutputs = EnumSet.allOf(Output.class);
 		availableOutputs.remove(Output.ALL);
 		availableOutputs.remove(Output.NONE);
 
@@ -133,44 +124,20 @@ public class Serialization {
 
 		ImmutableMap.Builder<Output, JacksonCborMapper> dsonBuilder = ImmutableMap.builder();
 
-		JacksonCborMapper hashDsonMapper = JacksonCborMapper.create(idLookup, filterProviderFor(policy.getIncludedFields(Output.HASH)), true);
+		var hashDsonMapper = JacksonCborMapper.create(idLookup, filterProviderFor(policy.getIncludedFields(Output.HASH)), true);
 
-		JacksonCborMapper apiDsonMapper = JacksonCborMapper.create(idLookup, filterProviderFor(policy.getIncludedFields(Output.API)),
+		var apiDsonMapper = JacksonCborMapper.create(idLookup, filterProviderFor(policy.getIncludedFields(Output.API)),
 				true, Optional.of(new ApiSerializationModifier(hashDsonMapper)));
 
 		dsonBuilder.put(Output.HASH, hashDsonMapper);
 		dsonBuilder.put(Output.API, apiDsonMapper);
 		dsonBuilder.put(Output.NONE, JacksonCborMapper.create(idLookup, noneProvider, true));
 		dsonBuilder.put(Output.ALL, JacksonCborMapper.create(idLookup, allProvider, true));
-		for (Output e : Arrays.asList(Output.PERSIST, Output.WIRE)) {
+		for (var e : List.of(Output.PERSIST, Output.WIRE)) {
 			dsonBuilder.put(e, JacksonCborMapper.create(idLookup, filterProviderFor(policy.getIncludedFields(e)), true));
 		}
 
 		dsonMappers = dsonBuilder.build();
-
-		ImmutableMap.Builder<Output, JacksonJsonMapper> jsonBuilder = ImmutableMap.builder();
-
-		var hashJsonMapper = JacksonJsonMapper.create(
-			idLookup,
-			filterProviderFor(policy.getIncludedFields(Output.HASH)),
-			false
-		);
-		var apiJsonMapper = JacksonJsonMapper.create(
-			idLookup,
-			filterProviderFor(policy.getIncludedFields(Output.API)),
-			false,
-			Optional.of(new ApiSerializationModifier(hashDsonMapper))
-		);
-
-		jsonBuilder.put(Output.HASH, hashJsonMapper);
-		jsonBuilder.put(Output.API, apiJsonMapper);
-		jsonBuilder.put(Output.NONE, JacksonJsonMapper.create(idLookup, noneProvider, false));
-		jsonBuilder.put(Output.ALL, JacksonJsonMapper.create(idLookup, allProvider, false));
-		for (Output e : Lists.newArrayList(Output.PERSIST, Output.WIRE)) {
-			jsonBuilder.put(e, JacksonJsonMapper.create(idLookup, filterProviderFor(policy.getIncludedFields(e)), false));
-		}
-
-		jsonMappers = jsonBuilder.build();
 	}
 
 	/**
@@ -186,51 +153,6 @@ public class Serialization {
 			return dsonMapper(output).writeValueAsBytes(o);
 		} catch (JsonProcessingException ex) {
 			throw new IllegalStateException(assembleMessage(o, "DSON"), ex);
-		}
-	}
-
-	/**
-	 * Convert the specified object to a JSON encoded string for the specified
-	 * output mode.
-	 *
-	 * @param o The object to serialize
-	 * @param output The output mode to serialize for
-	 * @return The serialized object as a JSON string
-	 */
-	public String toJson(Object o, DsonOutput.Output output) {
-		try {
-			return jsonMapper(output).writeValueAsString(o);
-		} catch (JsonProcessingException ex) {
-			throw new IllegalStateException(assembleMessage(o, "JSON"), ex);
-		}
-	}
-
-	/**
-	 * Convert the specified object to a {@link JSONObject} encoded string for the specified
-	 * output mode.
-	 *
-	 * @param o The object to serialize
-	 * @param output The output mode to serialize for
-	 * @return The serialized object as a JSON string
-	 */
-	public JSONObject toJsonObject(Object o, DsonOutput.Output output) {
-		return jsonMapper(output).convertValue(o, JSONObject.class);
-	}
-
-	/**
-	 * Convert the specified DSON encoded byte array to an instance of the
-	 * specified class.
-	 *
-	 * @param bytes The DSON encoded object to deserialize
-	 * @param valueType The class of the object to deserialize
-	 * @return The deserialized object
-	 * @throws DeserializeException if something goes wrong with serialization
-	 */
-	public <T> T fromDson(byte[] bytes, int offset, int len, Class<T> valueType) throws DeserializeException {
-		try {
-			return dsonMapper(Output.ALL).readValue(bytes, offset, len, valueType);
-		} catch (IOException ex) {
-			throw new DeserializeException("Error converting from DSON", ex);
 		}
 	}
 
@@ -251,91 +173,8 @@ public class Serialization {
 		}
 	}
 
-	/**
-	 * Convert the specified JSON encoded string to an instance of the
-	 * specified class.
-	 *
-	 * @param json The JSON encoded object to deserialize
-	 * @param valueType The class of the object to deserialize
-	 * @return The deserialized object
-	 * @throws DeserializeException if something goes wrong with serialization
-	 */
-	public <T> T fromJson(String json, Class<T> valueType) throws DeserializeException {
-		try {
-			return jsonMapper(Output.ALL).readValue(json, valueType);
-		} catch (IOException ex) {
-			throw new DeserializeException("Error converting from JSON", ex);
-		}
-	}
-
-	/**
-	 * Convert the specified JSON encoded string to an instance of the
-	 * specified class.
-	 *
-	 * @param json The JSON encoded object to deserialize
-	 * @param valueType The class of the object to deserialize
-	 * @return The deserialized object
-	 * @throws DeserializeException if something goes wrong with serialization
-	 */
-	public <T> T fromJson(String json, JsonJavaType valueType) throws DeserializeException {
-		try {
-			return jsonMapper(Output.ALL).readValue(json, valueType.javaType());
-		} catch (IOException ex) {
-			throw new DeserializeException("Error converting from JSON", ex);
-		}
-	}
-
-	/**
-	 * Convert the specified JSONObject to an instance of the
-	 * specified class.
-	 *
-	 * @param json The {@link JSONObject} object to convert
-	 * @param valueType The class of the object to convert to
-	 * @return The converted object
-	 */
-	public <T> T fromJsonObject(JSONObject json, Class<T> valueType) {
-		return jsonMapper(Output.ALL).convertValue(json, valueType);
-	}
-
-	/**
-	 * Return a collection type for use with the {@link #fromJson(String, JsonJavaType)} method.
-	 *
-	 * @param collectionClass The collection class to deserialize.
-	 * @param elementClass The collection element type.
-	 * @return The deserialized collection.
-	 */
-	@SuppressWarnings("rawtypes")
-	public JsonJavaType jsonCollectionType(Class<? extends Collection> collectionClass, Class<?> elementClass) {
-		JavaType type = jsonMappers.get(Output.ALL).getTypeFactory().constructCollectionType(collectionClass, elementClass);
-		return new JsonJavaType(type);
-	}
-
-	/**
-	 * Retrieve serializer ID from class.
-	 *
-	 * @param cls The class to look up the ID for
-	 * @return The serializer ID, or {@code null} if no serializer for the specified class.
-	 */
-	public String getIdForClass(Class<?> cls) {
-		return idLookup.getIdForClass(cls);
-	}
-
-	/**
-	 * Retrieve class given a serializer ID.
-	 *
-	 * @param id The ID to look up the class for
-	 * @return The class, or {@code null} if serializer ID unknown.
-	 */
-	public Class<?> getClassForId(String id) {
-		return idLookup.getClassForId(id);
-	}
-
 	private JacksonCborMapper dsonMapper(Output output) {
 		return dsonMappers.get(output);
-	}
-
-	private JacksonJsonMapper jsonMapper(Output output) {
-		return jsonMappers.get(output);
 	}
 
 	private static <T, U, A, R> Collector<T, ?, R> flatMapping(Function<? super T, ? extends Stream<? extends U>> mapper,
